# tbh_skill_simulator

./: Cargo.toml  README.md  build.rs  bundle.sh  cache_deleted.sh
.github/workflows/: build.yml
assets/heros/: heros.json
assets/skills/: hunter.json  knight.json  priest.json  ranger.json  slayer.json  sorcerer.json
src/: lib.rs  main.rs
src/app/: current_hero.rs  level_group.rs  mod.rs  sound_data.rs
src/app/knight_panel/: hero.rs  level.rs  mod.rs  skill.rs
src/app/knight_panel/skill_panel/: mod.rs
src/hero/: level_group.rs  mod.rs  skill.rs
src/hero/data/: hero.rs  mod.rs  skill.rs
src/rendar/: mod.rs  response_ext.rs
src/rendar/panel/: hero.rs  level.rs  mod.rs  skill.rs
src/rendar/panel/hero_panel/: mod.rs
src/rendar/panel/skill_panel/: detail.rs  mod.rs
src/rendar/panel/skill_panel/detail/: mod.rs  panel.rs
