[package]
name = "tbh_skill_simulator"
version = "0.1.0"
edition = "2024"

[build-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dependencies]
egui = "0.34.3"
egui_extras = { version = "0.34.3", features = ["all_loaders"] }
eframe = { version = "0.34.3", features = ["persistence"] }
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.33"
env_logger = "0.11.10"
getset = "0.1.7"
