[package]
name = "tbh_skill_simulator"
version = "0.1.2"
edition = "2024"
description = "Skill build simulator for TBH"

[package.metadata.bundle]
identifier = "jp.ktgwya.tbh-skill-simulator"
name = "TBH Skill Simulator"
icon = ["assets/icon.png"]
category = "Game"
short_description = "Skill build simulator for TBH"
linux_use_terminal = false
deb_depends = [
    "libgtk-3-0",
    "libxcb-render0",
    "libxcb-shape0",
    "libxcb-xfixes0",
    "libxkbcommon0",
    "libvulkan1",
    "libssl3",
]

[package.metadata.winresource]
ProductName = "TBH Skill Simulator"
FileDescription = "Skill build simulator for TBH"
OriginalFilename = "TBH Skill Simulator.exe"

[build-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
winresource = "0.1.31"
image = "0.25"
ico = "0.5"

[dependencies]
egui = "0.34.3"
egui_extras = { version = "0.34.3", features = ["all_loaders"] }
eframe = { version = "0.34.3", features = ["persistence"] }
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.33"
env_logger = "0.11.10"
getset = "0.1.7"
